; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_trace_create_savedcmd.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_trace_create_savedcmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GFP_KERNEL = common dso_local global i32 0, align 4
@savedcmd = common dso_local global i32* null, align 8
@ENOMEM = common dso_local global i32 0, align 4
@SAVED_CMDLINES_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @trace_create_savedcmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trace_create_savedcmd() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call i32* @kmalloc(i32 4, i32 %3)
  store i32* %4, i32** @savedcmd, align 8
  %5 = load i32*, i32** @savedcmd, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %0
  %8 = load i32, i32* @ENOMEM, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %1, align 4
  br label %22

10:                                               ; preds = %0
  %11 = load i32, i32* @SAVED_CMDLINES_DEFAULT, align 4
  %12 = load i32*, i32** @savedcmd, align 8
  %13 = call i32 @allocate_cmdlines_buffer(i32 %11, i32* %12)
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %10
  %17 = load i32*, i32** @savedcmd, align 8
  %18 = call i32 @kfree(i32* %17)
  store i32* null, i32** @savedcmd, align 8
  %19 = load i32, i32* @ENOMEM, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %1, align 4
  br label %22

21:                                               ; preds = %10
  store i32 0, i32* %1, align 4
  br label %22

22:                                               ; preds = %21, %16, %7
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32* @kmalloc(i32, i32) #1

declare dso_local i32 @allocate_cmdlines_buffer(i32, i32*) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
